--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/barnoma-soz/tailwind-gallery-page#readme",
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.0",
     "tailwindcss": "^3.0.8"
   }
 }
